Bug 302523 - dashboard detection in the dashboard effect is too wonky
Summary: dashboard detection in the dashboard effect is too wonky
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 4.8.4
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-25 18:51 UTC by Dave Flogeras
Modified: 2012-07-05 17:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dave Flogeras 2012-06-25 18:51:14 UTC
I run kde 4.8.4 for my main development machine.  For work, we have an (Qt only, not KDE) application we are developing called 'dashboard'.  When run on a KDE login, the window starts up and all other windows/the desktop are dimmed when the 'dashboard' window is selected.  You can easily reproduce it by doing the following

cp `which konsole` dashboard
./dashboard


Reproducible: Always
Comment 1 Thomas Lübking 2012-06-25 22:10:41 UTC
it triggers the dashboard effect which just checks for the wm class =)
(kcmshell4 kwincompositing, 2nd tab, disable dashboard effect)

i guess we could sharpen* the detection but reasonably the dashboard should have a tagging property (which *could* be used by other interested clients as well) or we need a window class for these things.

-----------
*fullscreen, maximized, keep above, deprecated override type, skip taskbar & pager - only keep above & window type are however exported to effect windows atm - we could however check the geometry :-(

it's not like i'd want to advertise this solution - explicit property is much better.
Comment 2 Thomas Lübking 2012-07-05 17:55:20 UTC
Git commit ee14781eefc60a2584636742a6bb843a3a8625d8 by Thomas Lübking.
Committed on 28/06/2012 at 21:08.
Pushed by luebking into branch 'KDE/4.9'.

use window role to detect dashboard
FIXED-IN: 4.9
REVIEW: 105382

M  +1    -5    kwin/effects/dashboard/dashboard.cpp
M  +1    -0    plasma/desktop/shell/dashboardview.cpp

http://commits.kde.org/kde-workspace/ee14781eefc60a2584636742a6bb843a3a8625d8