use window role to detect dashboard

BUG: 302523
FIXED-IN: 4.9
REVIEW: 105382